autoconf: move the kvmrc config to extras
Signed-off-by: Anton Todorov <a.todorov@storpool.com>

--- a/misc/autoconf-storpoolonly.yaml
+++ b/misc/autoconf-storpoolonly.yaml
@@ -42,6 +42,16 @@
         io: "\"native\""
         discard: "\"unmap\""
 
+/var/lib/one/remotes/etc/vmm/kvm/kvmrc:
+  :lens: Shellvars.lns
+  :apply:
+    default_attach_disk:
+      :method: simple_conf
+      :arguments:
+        DEFAULT_ATTACH_CACHE: "none"
+        DEFAULT_ATTACH_DISCARD: "unmap"
+        DEFAULT_ATTACH_IO: "native"
+
 /var/lib/one/remotes/addon-storpoolrc:
   :lens: Shellvars.lns
   :apply:
