change MKSWAP variable by autoconf-*.yaml
Signed-off-by: Anton Todorov <a.todorov@storpool.com>

--- a/misc/autoconf-5.13.yaml
+++ b/misc/autoconf-5.13.yaml
@@ -23,3 +23,6 @@
       :method: simple_conf
       :arguments:
         UPDATE_IMAGE_ON_IMPORT: "0"
+        MKSWAP: "/sbin/mkswap"
+        MKFS: "/sbin/mkfs"
+
