update autoconf defaults from one 6.0+
Change-Id: Ib09ee9352c46c2dfcde02b56f6ec412d9c853d4e

--- a/misc/autoconf-6.0.yaml
+++ b/misc/autoconf-6.0.yaml
@@ -22,7 +22,7 @@
     version_defaults:
       :method: simple_conf
       :arguments:
-        UPDATE_IMAGE_ON_IMPORT: "0"
-        MKSWAP: "/sbin/mkswap"
-        MKFS: "/sbin/mkfs"
+        UPDATE_IMAGE_ON_IMPORT: "1"
+        MKSWAP: "/usr/sbin/mkswap"
+        MKFS: "/usr/sbin/mkfs"
 
