Use /var/cache/... instead of /tmp/monitor
Change-Id: Idd5b9f5841c5f004c030eef149b57e6bd321a619

--- a/misc/etc/systemd/system/monitor_helper-sync.service
+++ b/misc/etc/systemd/system/monitor_helper-sync.service
@@ -1,5 +1,5 @@
 [Unit]
-Description=Create cached StorPool data JSONs in /tmp/monitor
+Description=Create cached StorPool data JSONs in /var/cache/addon-storpool-monitor
 Wants=monitor_helper-sync.timer
 
 [Service]
